Saved by InRule DevOps.

--- a/Reports/InvoiceSample_r6.htm
+++ b/Reports/InvoiceSample_r6.htm
@@ -108,9 +108,9 @@
         RuleApp Name:
         InvoiceSample
         Guid:
-        7544a713-f862-40d4-bfc4-b45504bce354
+        fb4a8bf5-a6f4-460d-a040-23db1f914415
         Last Modified:
-        2022-12-05<br><br>
+        2023-02-03<br><br>
           Total # Rules and Calcs:
           2
             # Entities:
@@ -159,9 +159,11 @@
       Description:
       This rule set performs data validation on the customer name (which is looked up from Customer ID). <table class="rules" cellpadding="3" cellspacing="2" width="100%"><col width="20%"><col width="60%"><col width="20%"><tr><th>Rule or Action</th><th>Detail</th><th>Description, Notes, and Categories</th></tr><tr><td valign="top" title="CheckCustName"><span class="colx">CheckCustName</span></td><td><span class="colx"><b>If</b><br>&nbsp;&nbsp;&nbsp;&nbsp; <b>CustName</b> is null or empty<br><b>Then</b><br>&nbsp;&nbsp;&nbsp;&nbsp;mark <b>CustID</b> invalid and display "The Customer ID " & <b>CustID</b> & " is not valid." </span></td><td></td></tr></table></div><div class="rules"><h2>
           Rule Set:
-          RuleSet123456</h2>
+          RuleSet12344</h2>
     Fire mode:
-    Explicit<table class="rules" cellpadding="3" cellspacing="2" width="100%"><col width="20%"><col width="60%"><col width="20%"><tr><th>Rule or Action</th><th>Detail</th><th>Description, Notes, and Categories</th></tr></table></div></div><div class="entity"><a class="HrefName" name="Entity2"></a><h2>
+    Auto<br>
+      Run mode:
+      Single-Pass Sequential<table class="rules" cellpadding="3" cellspacing="2" width="100%"><col width="20%"><col width="60%"><col width="20%"><tr><th>Rule or Action</th><th>Detail</th><th>Description, Notes, and Categories</th></tr></table></div></div><div class="entity"><a class="HrefName" name="Entity2"></a><h2>
           Entity: LineItem</h2><table class="links" border="0" cellpadding="3" cellspacing="2" width="100%"><col width="20%"><col width="20%"><col width="20%"><col width="20%"><tr><td><a class="HrefLink" href="#Fields2">
                   Fields
                 </a></td><td><a class="HrefLink" href="#Calculations2">
